--- a/AdvancedLogExplorer/Web/advancedlogexplorer.html
+++ b/AdvancedLogExplorer/Web/advancedlogexplorer.html
@@ -1,4 +1,4 @@
-<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+ts<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
 <meta http-equiv="Pragma" content="no-cache" />
 <meta http-equiv="Expires" content="0" />
 
@@ -98,7 +98,7 @@
             <label>Keyword2:</label>
             <input id="keyword2" is="emby-input" type="text" class="emby-input" style="width:120px;" />
 
-            <label>Plugins:</label>
+            <label>Presets:</label>
             <select id="preset" is="emby-select" class="emby-select" style="width:120px;">
                 <option value="">None</option>
                 <option value="exception">Exceptions</option>
